// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/UserInfoHeader Maximum Infos 1`] = `
<header
  className="pt-8 pb-16 sm:pb-20 md:pb-28"
>
  <div
    className="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6 md:gap-8 relative pl-16 sm:pl-24 md:pl-28"
  >
    <div
      className="absolute top-0 left-0"
    >
      <span
        className="inline-block shadow rounded-full"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 49,
              "width": 49,
            }
          }
        >
          <img
            alt="Avatar of looee14"
            height={48}
            src="https://source.boringavatars.com/pixel/48/looee14?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
            width={48}
          />
        </span>
      </span>
    </div>
    <div
      className="flex-grow flex flex-wrap gap-x-6 gap-y-0"
    >
      <h1
        className="text-xl sm:text-2xl lg:text-3xl font-bold font-headline leading-tight w-full order-1 pt-1 sm:pt-0"
      >
        Louis Dieudonné de Bourbon
      </h1>
      <div
        className="w-full mt-3 order-3 sm:order-2"
      >
        <p
          className="max-w-prose text-sm sm:text-base"
        >
          Louis XIV, also known as Louis the Great or the Sun King, was King of France from 14 May 1643 until his death in 1715.
        </p>
      </div>
      <a
        className="text-purple hover:text-blue transition-colors inline-block order-2 sm:order-3 mt-0 sm:mt-3"
        href="/looee14/sensors"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        @
        looee14
      </a>
      <a
        className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset break-all inline-block order-4 sm:order-5 mt-3"
        href="https://www.webanddata.com/suburl/login"
        rel="noopener noreferrer"
        target="_blank"
      >
        www.webanddata.com/suburl/login
      </a>
    </div>
    <div
      className="md:mt-12 self-start flex flex-wrap md:flex-nowrap gap-4 sm:gap-8 justify-self-end items-center"
    >
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          12.342
        </span>
        <span>
          Sensor
          en
        </span>
      </div>
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          11 Mio.
        </span>
        <span>
          Messwert
          e
        </span>
      </div>
    </div>
  </div>
  <div
    className="pl-16 sm:pl-24 md:pl-28"
  >
    <div
      className="w-full order-last mt-4"
    >
      <button
        className="inline-block font-headline transition text-base sm:text-lg rounded-none px-3 sm:px-4 py-1.5 sm:py-2 cursor-pointer focus-offset focus:ring-green border border-purple hover:bg-opacity-10 hover:bg-green hover:border-green"
        onClick={[Function]}
        type="button"
      >
        Account editieren
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots UI Elements/UserInfoHeader Minimal Infos 1`] = `
<header
  className="pt-8 pb-16 sm:pb-20 md:pb-28"
>
  <div
    className="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6 md:gap-8 relative pl-16 sm:pl-24 md:pl-28"
  >
    <div
      className="absolute top-0 left-0"
    >
      <span
        className="inline-block shadow rounded-full"
      >
        <span
          className="inline-block align-middle rounded-full border border-gray-50"
          role="img"
          style={
            Object {
              "height": 49,
              "width": 49,
            }
          }
        >
          <img
            alt="Avatar of looee14"
            height={48}
            src="https://source.boringavatars.com/pixel/48/looee14?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
            width={48}
          />
        </span>
      </span>
    </div>
    <div
      className="flex-grow flex flex-wrap gap-x-6 gap-y-0"
    >
      <h1
        className="text-xl sm:text-2xl lg:text-3xl font-bold font-headline leading-tight w-full order-1 pt-1 sm:pt-0"
      >
        Louis Dieudonné de Bourbon
      </h1>
      <a
        className="text-purple hover:text-blue transition-colors inline-block order-2 sm:order-3 mt-0 sm:mt-3"
        href="/looee14/sensors"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        @
        looee14
      </a>
    </div>
    <div
      className="md:mt-12 self-start flex flex-wrap md:flex-nowrap gap-4 sm:gap-8 justify-self-end items-center"
    >
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          0
        </span>
        <span>
          Sensor
          en
        </span>
      </div>
      <div
        className="flex flex-col"
      >
        <span
          className="text-md sm:text-xl lg:text-2xl pt-1 font-mono lg:font-light text-gray-700"
        >
          0
        </span>
        <span>
          Messwert
          e
        </span>
      </div>
    </div>
  </div>
</header>
`;
